try to fix linux_x64 gcc Argument list too long
Signed-off-by: littlegreyzhang <826999015@qq.com>

--- a/source/extensions/filters/network/redis_proxy/BUILD
+++ b/source/extensions/filters/network/redis_proxy/BUILD
@@ -51,27 +51,6 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
-    name = "command_splitter_lib",
-    srcs = ["command_splitter_impl.cc"],
-    hdrs = ["command_splitter_impl.h"],
-    deps = [
-        ":command_splitter_interface",
-        ":conn_pool_lib",
-        ":router_interface",
-        "//include/envoy/stats:stats_macros",
-        "//include/envoy/stats:timespan_interface",
-        "//source/common/common:assert_lib",
-        "//source/common/common:minimal_logger_lib",
-        "//source/common/common:utility_lib",
-        "//source/common/stats:timespan_lib",
-        "//source/extensions/filters/network/common/redis:client_lib",
-        "//source/extensions/filters/network/common/redis:fault_lib",
-        "//source/extensions/filters/network/common/redis:supported_commands_lib",
-        "//source/extensions/filters/network/common/redis:utility_lib",
-    ],
-)
-
-envoy_cc_library(
     name = "conn_pool_lib",
     srcs = ["conn_pool_impl.cc"],
     hdrs = ["conn_pool_impl.h"],
@@ -98,29 +77,20 @@ envoy_cc_library(
     ],
 )
 
-envoy_cc_library(
-    name = "proxy_filter_lib",
-    srcs = ["proxy_filter.cc"],
-    hdrs = ["proxy_filter.h"],
-    deps = [
-        ":command_splitter_interface",
-        "//include/envoy/network:drain_decision_interface",
-        "//include/envoy/network:filter_interface",
-        "//include/envoy/upstream:cluster_manager_interface",
-        "//source/common/buffer:buffer_lib",
-        "//source/common/common:assert_lib",
-        "//source/common/config:datasource_lib",
-        "//source/common/config:utility_lib",
-        "//source/extensions/filters/network/common/redis:codec_interface",
-        "//source/extensions/filters/network/redis_proxy/feature:feature_lib",
-        "@envoy_api//envoy/extensions/filters/network/redis_proxy/v3:pkg_cc_proto",
-    ],
-)
-
 envoy_cc_extension(
     name = "config",
-    srcs = ["config.cc"],
-    hdrs = ["config.h"],
+    srcs = [
+        "command_splitter_impl.cc",
+        "config.cc",
+        "proxy_filter.cc",
+        "router_impl.cc",
+    ],
+    hdrs = [
+        "command_splitter_impl.h",
+        "config.h",
+        "proxy_filter.h",
+        "router_impl.h",
+    ],
     category = "envoy.filters.network",
     # TODO(#9953) clean up.
     extra_visibility = [
@@ -128,34 +98,36 @@ envoy_cc_extension(
     ],
     security_posture = "requires_trusted_downstream_and_upstream",
     deps = [
+        "//include/envoy/event:dispatcher_interface",
+        "//include/envoy/network:drain_decision_interface",
+        "//include/envoy/network:filter_interface",
+        "//include/envoy/stats:stats_macros",
+        "//include/envoy/stats:timespan_interface",
+        "//include/envoy/thread_local:thread_local_interface",
+        "//include/envoy/upstream:cluster_manager_interface",
         "//include/envoy/upstream:upstream_interface",
+        "//source/common/buffer:buffer_lib",
+        "//source/common/common:assert_lib",
+        "//source/common/common:minimal_logger_lib",
+        "//source/common/common:utility_lib",
+        "//source/common/config:datasource_lib",
+        "//source/common/config:utility_lib",
+        "//source/common/stats:timespan_lib",
         "//source/extensions/common/redis:cluster_refresh_manager_lib",
         "//source/extensions/filters/network:well_known_names",
         "//source/extensions/filters/network/common:factory_base_lib",
+        "//source/extensions/filters/network/common/redis:client_lib",
+        "//source/extensions/filters/network/common/redis:codec_interface",
         "//source/extensions/filters/network/common/redis:codec_lib",
         "//source/extensions/filters/network/common/redis:fault_lib",
         "//source/extensions/filters/network/common/redis:redis_command_stats_lib",
-        "//source/extensions/filters/network/redis_proxy:command_splitter_lib",
-        "//source/extensions/filters/network/redis_proxy:conn_pool_lib",
-        "//source/extensions/filters/network/redis_proxy:proxy_filter_lib",
-        "//source/extensions/filters/network/redis_proxy:router_lib",
-        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
-        "@envoy_api//envoy/extensions/filters/network/redis_proxy/v3:pkg_cc_proto",
-    ],
-)
-
-envoy_cc_library(
-    name = "router_lib",
-    srcs = ["router_impl.cc"],
-    hdrs = ["router_impl.h"],
-    deps = [
-        ":router_interface",
-        "//include/envoy/thread_local:thread_local_interface",
-        "//include/envoy/upstream:cluster_manager_interface",
-        "//source/extensions/filters/network/common/redis:codec_lib",
         "//source/extensions/filters/network/common/redis:supported_commands_lib",
         "//source/extensions/filters/network/common/redis:utility_lib",
+        "//source/extensions/filters/network/redis_proxy:command_splitter_interface",
         "//source/extensions/filters/network/redis_proxy:conn_pool_lib",
+        "//source/extensions/filters/network/redis_proxy:router_interface",
+        "//source/extensions/filters/network/redis_proxy/feature:feature_lib",
+        "@envoy_api//envoy/config/core/v3:pkg_cc_proto",
         "@envoy_api//envoy/extensions/filters/network/redis_proxy/v3:pkg_cc_proto",
         "@envoy_api//envoy/type/v3:pkg_cc_proto",
     ],
