--- a/test/extensions/filters/network/redis_proxy/BUILD
+++ b/test/extensions/filters/network/redis_proxy/BUILD
@@ -26,7 +26,7 @@ envoy_extension_cc_test(
         "//source/common/stats:isolated_store_lib",
         "//source/common/stats:stats_lib",
         "//source/extensions/filters/network/common/redis:fault_lib",
-        "//source/extensions/filters/network/redis_proxy:command_splitter_lib",
+        "//source/extensions/filters/network/redis_proxy:config",
         "//source/extensions/filters/network/redis_proxy:router_interface",
         "//test/extensions/filters/network/common/redis:redis_mocks",
         "//test/mocks:common_lib",
@@ -76,7 +76,7 @@ envoy_extension_cc_test(
     deps = [
         ":redis_mocks",
         "//source/common/event:dispatcher_lib",
-        "//source/extensions/filters/network/redis_proxy:proxy_filter_lib",
+        "//source/extensions/filters/network/redis_proxy:config",
         "//test/extensions/filters/network/common/redis:redis_mocks",
         "//test/mocks:common_lib",
         "//test/mocks/api:api_mocks",
@@ -96,7 +96,7 @@ envoy_cc_mock(
         "//source/extensions/filters/network/common/redis:client_interface",
         "//source/extensions/filters/network/common/redis:codec_lib",
         "//source/extensions/filters/network/common/redis:fault_interface",
-        "//source/extensions/filters/network/redis_proxy:command_splitter_interface",
+        "//source/extensions/filters/network/redis_proxy:config",
         "//source/extensions/filters/network/redis_proxy:conn_pool_interface",
         "//source/extensions/filters/network/redis_proxy:router_interface",
         "//test/test_common:printers_lib",
@@ -127,7 +127,7 @@ envoy_extension_cc_benchmark_binary(
         ":redis_mocks",
         "//source/common/stats:isolated_store_lib",
         "//source/common/stats:stats_lib",
-        "//source/extensions/filters/network/redis_proxy:command_splitter_lib",
+        "//source/extensions/filters/network/redis_proxy:config",
         "//test/mocks/event:event_mocks",
         "//test/test_common:printers_lib",
         "//test/test_common:simulated_time_system_lib",
@@ -146,7 +146,7 @@ envoy_extension_cc_test(
     extension_name = "envoy.filters.network.redis_proxy",
     deps = [
         ":redis_mocks",
-        "//source/extensions/filters/network/redis_proxy:router_lib",
+        "//source/extensions/filters/network/redis_proxy:config",
         "//test/extensions/filters/network/common/redis:redis_mocks",
         "//test/mocks/runtime:runtime_mocks",
         "//test/test_common:utility_lib",
@@ -177,8 +177,7 @@ envoy_extension_cc_benchmark_binary(
         ":redis_mocks",
         "//source/common/stats:isolated_store_lib",
         "//source/common/stats:stats_lib",
-        "//source/extensions/filters/network/redis_proxy:command_splitter_lib",
-        "//source/extensions/filters/network/redis_proxy:router_lib",
+        "//source/extensions/filters/network/redis_proxy:config",
         "//test/test_common:printers_lib",
         "//test/test_common:simulated_time_system_lib",
     ],
