try to fix linux_x64 gcc Argument list too long
Signed-off-by: littlegreyzhang <826999015@qq.com>

--- a/source/extensions/filters/network/common/redis/BUILD
+++ b/source/extensions/filters/network/common/redis/BUILD
@@ -37,9 +37,20 @@ envoy_cc_library(
 
 envoy_cc_library(
     name = "supported_commands_lib",
-    hdrs = ["supported_commands.h"],
+    srcs = ["redis_command_stats.cc"],
+    hdrs = [
+        "redis_command_stats.h",
+        "supported_commands.h",
+    ],
     deps = [
+        ":codec_interface",
+        "//include/envoy/stats:stats_interface",
+        "//include/envoy/stats:timespan_interface",
         "//source/common/common:macros",
+        "//source/common/common:utility_lib",
+        "//source/common/stats:symbol_table_lib",
+        "//source/common/stats:timespan_lib",
+        "//source/common/stats:utility_lib",
     ],
 )
 
@@ -48,25 +59,36 @@ envoy_cc_library(
     hdrs = ["client.h"],
     deps = [
         ":codec_lib",
-        ":redis_command_stats_lib",
+        ":supported_commands_lib",
         "//include/envoy/upstream:cluster_manager_interface",
     ],
 )
 
 envoy_cc_library(
     name = "client_lib",
-    srcs = ["client_impl.cc"],
-    hdrs = ["client_impl.h"],
+    srcs = [
+        "client_impl.cc",
+        "fault_impl.cc",
+        "utility.cc",
+    ],
+    hdrs = [
+        "client_impl.h",
+        "fault_impl.h",
+        "utility.h",
+    ],
     deps = [
         ":client_interface",
         ":codec_lib",
-        ":utility_lib",
+        ":fault_interface",
+        "//include/envoy/common:random_generator_interface",
         "//include/envoy/router:router_interface",
         "//include/envoy/stats:timespan_interface",
         "//include/envoy/thread_local:thread_local_interface",
         "//include/envoy/upstream:cluster_manager_interface",
+        "//include/envoy/upstream:upstream_interface",
         "//source/common/buffer:buffer_lib",
         "//source/common/common:assert_lib",
+        "//source/common/common:utility_lib",
         "//source/common/network:filter_lib",
         "//source/common/protobuf:utility_lib",
         "//source/common/upstream:load_balancer_lib",
@@ -76,49 +98,9 @@ envoy_cc_library(
 )
 
 envoy_cc_library(
-    name = "utility_lib",
-    srcs = ["utility.cc"],
-    hdrs = ["utility.h"],
-    deps = [
-        ":codec_lib",
-        "//source/common/common:utility_lib",
-    ],
-)
-
-envoy_cc_library(
-    name = "redis_command_stats_lib",
-    srcs = ["redis_command_stats.cc"],
-    hdrs = ["redis_command_stats.h"],
-    deps = [
-        ":codec_interface",
-        ":supported_commands_lib",
-        "//include/envoy/stats:stats_interface",
-        "//include/envoy/stats:timespan_interface",
-        "//source/common/common:utility_lib",
-        "//source/common/stats:symbol_table_lib",
-        "//source/common/stats:timespan_lib",
-        "//source/common/stats:utility_lib",
-    ],
-)
-
-envoy_cc_library(
     name = "fault_interface",
     hdrs = ["fault.h"],
     deps = [
         "@envoy_api//envoy/type/v3:pkg_cc_proto",
-    ],
-)
-
-envoy_cc_library(
-    name = "fault_lib",
-    srcs = ["fault_impl.cc"],
-    hdrs = ["fault_impl.h"],
-    deps = [
-        ":codec_lib",
-        ":fault_interface",
-        "//include/envoy/common:random_generator_interface",
-        "//include/envoy/upstream:upstream_interface",
-        "//source/common/protobuf:utility_lib",
-        "@envoy_api//envoy/extensions/filters/network/redis_proxy/v3:pkg_cc_proto",
     ],
 )
