--- a/test/extensions/filters/network/redis_proxy/BUILD
+++ b/test/extensions/filters/network/redis_proxy/BUILD
@@ -25,7 +25,7 @@ envoy_extension_cc_test(
         ":redis_mocks",
         "//source/common/stats:isolated_store_lib",
         "//source/common/stats:stats_lib",
-        "//source/extensions/filters/network/common/redis:fault_lib",
+        "//source/extensions/filters/network/common/redis:client_lib",
         "//source/extensions/filters/network/redis_proxy:config",
         "//source/extensions/filters/network/redis_proxy:router_interface",
         "//test/extensions/filters/network/common/redis:redis_mocks",
@@ -47,7 +47,7 @@ envoy_extension_cc_test(
         "//source/common/network:utility_lib",
         "//source/common/upstream:upstream_includes",
         "//source/common/upstream:upstream_lib",
-        "//source/extensions/filters/network/common/redis:utility_lib",
+        "//source/extensions/filters/network/common/redis:client_lib",
         "//source/extensions/filters/network/redis_proxy:conn_pool_lib",
         "//test/extensions/clusters/redis:redis_cluster_mocks",
         "//test/extensions/common/redis:mocks_lib",
@@ -160,7 +160,7 @@ envoy_extension_cc_test(
     srcs = ["redis_proxy_integration_test.cc"],
     extension_name = "envoy.filters.network.redis_proxy",
     deps = [
-        "//source/extensions/filters/network/common/redis:fault_lib",
+        "//source/extensions/filters/network/common/redis:client_lib",
         "//source/extensions/filters/network/redis_proxy:config",
         "//test/integration:integration_lib",
     ],
