--- a/test/extensions/filters/network/common/redis/BUILD
+++ b/test/extensions/filters/network/common/redis/BUILD
@@ -68,7 +68,7 @@ envoy_cc_test(
     deps = [
         ":redis_mocks",
         "//source/common/common:assert_lib",
-        "//source/extensions/filters/network/common/redis:fault_lib",
+        "//source/extensions/filters/network/common/redis:client_lib",
         "//test/mocks/runtime:runtime_mocks",
         "//test/test_common:test_runtime_lib",
         "//test/test_common:utility_lib",
