--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -71,6 +71,8 @@ extensions/filters/common/original_src @snowp @klarose
 # redis cluster extension
 /*/extensions/clusters/redis @msukalski @henryyyang @mattklein123
 /*/extensions/common/redis @msukalski @henryyyang @mattklein123
+# sip_proxy extension
+/*/extensions/filters/network/sip_proxy @durd07 @nearbyfly
 # dynamic forward proxy
 /*/extensions/clusters/dynamic_forward_proxy @mattklein123 @alyssawilk
 /*/extensions/common/dynamic_forward_proxy @mattklein123 @alyssawilk
