--- a/api/BUILD
+++ b/api/BUILD
@@ -239,6 +239,9 @@ proto_library(
         "//envoy/extensions/filters/network/thrift_proxy/filters/ratelimit/v3:pkg",
         "//envoy/extensions/filters/network/thrift_proxy/router/v3:pkg",
         "//envoy/extensions/filters/network/thrift_proxy/v3:pkg",
+        "//envoy/extensions/filters/network/sip_proxy/filters/ratelimit/v3:pkg",
+        "//envoy/extensions/filters/network/sip_proxy/router/v3:pkg",
+        "//envoy/extensions/filters/network/sip_proxy/v3:pkg",
         "//envoy/extensions/filters/network/wasm/v3:pkg",
         "//envoy/extensions/filters/network/zookeeper_proxy/v3:pkg",
         "//envoy/extensions/filters/udp/dns_filter/v3alpha:pkg",
