--- a/include/envoy/http/BUILD
+++ b/include/envoy/http/BUILD
@@ -11,6 +11,7 @@ envoy_package()
 envoy_cc_library(
     name = "alternate_protocols_cache_interface",
     hdrs = ["alternate_protocols_cache.h"],
+    deps = ["//include/envoy/common:time_interface"],
 )
 
 envoy_cc_library(
