deps: Update `proxy_wasm_cpp_host` -> c4d7bb0, `wasmtime` -> 24.0.2, `wamr` -> 2.2.0 (#37868)
Commit Message: deps: Update `proxy_wasm_cpp_host` -> c4d7bb0,
`wasmtime` -> 24.0.2, `wamr` -> 2.2.0
Additional Description:
https://github.com/proxy-wasm/proxy-wasm-cpp-host/compare/f199214a43337e115469d9f0dd6b77858746441b...c4d7bb0fda912e24c64daf2aa749ec54cec99412
Risk Level: low
Testing: `bazel test test/...` passes, with `--define=wasm=v8`,
`--define=wasm=wamr`, and `--define=wasm=wasmtime`.
Docs Changes: None.
Release Notes: Mentioned new support for [Go
SDK](github.com/proxy-wasm/proxy-wasm-go-sdk) plugins.

Supercedes #36880 and #36857

---------

Signed-off-by: Matt Leon <mattleon@google.com>
Signed-off-by: Keith Mattix II <keithmattix@microsoft.com>
Co-authored-by: Ryan Northey <ryan@synca.io>
Co-authored-by: Keith Mattix II <keithmattix@microsoft.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -13,5 +13,8 @@ removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
 
 new_features:
+- area: wasm
+  change: |
+    Added support for wasm plugins written in Go with the github.com/proxy-wasm/proxy-wasm-go-sdk and compiled with Go v1.24+.
 
 deprecated:
