http: configurable ignore of HTTP/1.1 upgrades (#37642)
Fixes https://github.com/envoyproxy/envoy/issues/36305

Add configuration to ignore HTTP/1.1 Upgrade headers . See
https://datatracker.ietf.org/doc/html/rfc7230#section-6.7:

Signed-off-by: Greg Greenway <ggreenway@apple.com>
(cherry picked from commit ad400974d8114c9f2da6d96a4acf92e6601d5561)

fix stringmatcherimpl template version difference

Signed-off-by: Greg Greenway <ggreenway@apple.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -19,5 +19,10 @@ removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
 
 new_features:
+- area: http
+  change: |
+    Added :ref:`ignore_http_11_upgrade
+    <envoy_v3_api_field_config.core.v3.Http1ProtocolOptions.ignore_http_11_upgrade>`
+    to ignore HTTP/1.1 Upgrade values matching any of the supplied matchers.
 
 deprecated:
