redis_proxy: Add support for per-upstream auth credentials
This adds the ability to use upstream redis clusters which each have different usernames and/or passwords. The credentials are keyed with an `address`, which must be a socket address and matches against the upstream based on the port along with the hostname or IP address.

Tested: Unit and integration tests, as well as manual testing and using in production at my company for a couple months

Fixes: https://github.com/envoyproxy/envoy/issues/23962

Signed-off-by: Ben Breslauer <bb8gh@github.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -490,5 +490,8 @@ new_features:
     <envoy_v3_api_field_extensions.network.dns_resolver.cares.v3.CaresDnsResolverConfig.max_udp_channel_duration>`
     configuration field to the c-ares DNS resolver. This allows periodic refresh of the UDP channel
     to help avoid stale socket states and provide better load distribution across UDP ports.
+- area: redis
+  change: |
+    Added support for ``redis_proxy`` filter to use separate credentials for each upstream Redis cluster.
 
 deprecated:
