--- a/test/integration/BUILD
+++ b/test/integration/BUILD
@@ -2940,3 +2940,16 @@ envoy_cc_test(
         "@envoy_api//envoy/config/bootstrap/v3:pkg_cc_proto",
     ],
 )
+
+envoy_cc_test(
+    name = "quic_mtls_integration_test",
+    srcs = envoy_select_enable_http3(["quic_mtls_integration_test.cc"]),
+    data = [
+        "//test/config/integration/certs",
+    ],
+    deps = envoy_select_enable_http3([
+        ":quic_http_integration_test_lib",
+        "//source/common/quic:quic_ssl_connection_info_lib",
+        "//test/test_common:utility_lib",
+    ]),
+)
