http1: add request per connection tracking and metrics
Add HTTP/1.1 request tracking functionality to calculate and emit a running
average of requests handled per upstream connection. This provides insights
into connection efficiency and reuse patterns.

Additional Description:
Implements Http1RequestTracker class that monitors request counts per HTTP/1.1
connection and calculates a running average. The metric is emitted immediately
when connections close using an event-driven approach. Integration is done
through the HTTP/1.1 connection pool lifecycle events.

Risk Level: Low
- Event-driven implementation with no timer complexity
- Minimal memory overhead with bounded historical data
- No impact on request/response processing performance
- Isolated to HTTP/1.1 connection pool with existing patterns

Testing:
- Unit tests for Http1RequestTracker covering basic functionality, multiple
  connections, event-driven emission, edge cases, and historical data limiting
- Integration through existing HTTP/1.1 connection pool tests
- All tests pass with event-driven metric emission

Docs Changes:
- Added upstream_rq_per_cx_http1 gauge metric documentation
- Documented precision scaling (multiplied by 100) and emission behavior

Release Notes:
- Added upstream_rq_per_cx_http1 gauge metric to track average requests per
  HTTP/1.1 upstream connection for monitoring connection efficiency

Platform Specific Features: None

Signed-off-by: premnath.nenavath <premnath.nenavath@gomotive.com>

--- a/test/common/http/http1/BUILD
+++ b/test/common/http/http1/BUILD
@@ -51,6 +51,18 @@ envoy_cc_test(
 )
 
 envoy_cc_test(
+    name = "request_tracker_test",
+    srcs = ["request_tracker_test.cc"],
+    deps = [
+        "//source/common/http/http1:request_tracker_lib",
+        "//test/mocks/event:event_mocks",
+        "//test/mocks/stats:stats_mocks",
+        "//test/mocks/upstream:cluster_info_mocks",
+        "//test/test_common:simulated_time_system_lib",
+    ],
+)
+
+envoy_cc_test(
     name = "conn_pool_test",
     srcs = ["conn_pool_test.cc"],
     rbe_pool = "6gig",
