oauth2: add Secure attribute for prefixed cookies on signout
When using cookie names prefixed with `__Secure-` or `__Host-`, browsers
require the `Secure` attribute to be present on the `Set-Cookie` header
for any modification, including deletion.

The OAuth2 filter did not add this attribute when generating
the `Set-Cookie` headers to clear the OAuth cookies. This caused the
browser to ignore the deletion request for prefixed cookies, effectively
preventing the user from being signed out correctly.

This patch fixes the behavior to set the `Secure` attribute when either
prefix is found.

Signed-off-by: Tony Allen <txallen@google.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -106,6 +106,10 @@ bug_fixes:
     ``cluster.<cluster_name>.ssl.certificate.<cert_name>.<metric_name>``
     and ``listener.<address>.ssl.certificate.<cert_name>.<metric_name>``
     was not being properly extracted in the final prometheus stat name.
+- area: oauth2
+  change: |
+    Fixed an issue where cookies prefixed with ``__Secure-`` or ``__Host-`` were not receiving a
+    Secure attribute (`CVE-2025-55162 <https://github.com/envoyproxy/envoy/security/advisories/GHSA-95j4-hw7f-v2rh>`_).
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
