radix_tree: refactor the code to make it cleaner (#40435)
## Description

This PR refactors the Radix Tree code to make it cleaner. It also add
some more tests to improve the overall coverage.

---

**Commit Message:** radix_tree: refactor the code to make it cleaner
**Additional Description:** Refactors the Radix Tree implementation to
make it cleaner.
**Risk Level:** Low
**Testing:** Unit Tests
**Docs Changes:** N/A
**Release Notes:** N/A

Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/source/common/common/BUILD
+++ b/source/common/common/BUILD
@@ -498,7 +498,9 @@ envoy_cc_library(
     hdrs = ["radix_tree.h"],
     deps = [
         ":assert_lib",
+        "//envoy/common:optref_lib",
         "@com_google_absl//absl/container:flat_hash_map",
+        "@com_google_absl//absl/container:inlined_vector",
         "@com_google_absl//absl/strings",
     ],
 )
