--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -195,6 +195,12 @@ removed_config_or_runtime:
     Removed runtime guard ``envoy.reloadable_features.proxy_104`` and legacy code paths.
 
 new_features:
+- area: cel
+  change: |
+    Added per-expression configuration options for CEL evaluator to control string conversion, concatenation,
+    and string extension functions. CEL expressions in RBAC policies, access logger filters, and formatters
+    can now enable string functions such as ``replace()`` and ``split()`` through the new ``cel_config`` field
+    in their respective configurations.
 - area: stats
   change: |
     Added support to remove unused metrics from memory for extensions that
