edp: deprecate flag udp_set_do_not_fragment and remove legacy code paths
Signed-off-by: Rohit Agrawal <rohit.agrawal@databricks.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -143,6 +143,9 @@ removed_config_or_runtime:
 - area: http
   change: |
     Removed runtime guard ``envoy.reloadable_features.proxy_104`` and legacy code paths.
+- area: udp
+  change: |
+    Removed runtime guard ``envoy.reloadable_features.udp_set_do_not_fragment`` and legacy code paths.
 
 new_features:
 - area: stats
