Revert "Ext_proc: do not support fail_open+FULL_DUPLEX_STREAMED configuraton combination (#39740)" (#40503)
There is a request that to have ext_proc FULL_DUPLEX_STREAMED mode
support fail_open to certain stage, like before the 1st chunk of data is
shipped to the ext_proc server. This is doable.

This PR reverts "Ext_proc: do not support fail_open+FULL_DUPLEX_STREAMED
configuraton combination (#39740)", i.e, commit
4861b2057afbc67290da0ec77ae1f1af60f152d0.

A follow up PR will implement the above fail-open behavior.

---------

Signed-off-by: Yanjun Xiang <yanjunxiang@google.com>
Signed-off-by: Ryan Northey <ryan@synca.io>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -1,7 +1,9 @@
 date: Pending
 
 behavior_changes:
-# *Changes that are expected to cause an incompatibility if applicable; deployment changes are likely required*
+- area: ext_proc
+  change: |
+    Reverted https://github.com/envoyproxy/envoy/pull/39740 to re-enable fail_open+FULL_DUPLEX_STREAMED configuraton combination.
 
 minor_behavior_changes:
 # *Changes that may cause incompatibilities for some users, but should not for most*
