--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -233,5 +233,8 @@ new_features:
   change: |
     Added a new Logging ABI that allows modules to emit logs in the standard Envoy logging stream under "dynamic_modules" ID.
     In the Rust SDK, they are available as ``envoy_log_info``, etc.
+- area: http
+  change: |
+    Added ``upstream_rq_per_cx`` histogram to track requests per connection for monitoring connection reuse efficiency.
 
 deprecated:
