--- a/source/common/router/BUILD
+++ b/source/common/router/BUILD
@@ -355,6 +355,7 @@ envoy_cc_library(
     ],
     hdrs = [
         "router.h",
+        "router_cluster_config.h",
         "upstream_request.h",
     ],
     deps = [
@@ -381,6 +382,8 @@ envoy_cc_library(
         "//envoy/upstream:cluster_manager_interface",
         "//envoy/upstream:upstream_interface",
         "//source/common/access_log:access_log_lib",
+        "//source/common/buffer:copy_on_write_buffer_lib",
+        "//source/common/buffer:watermark_buffer_lib",
         "//source/common/common:assert_lib",
         "//source/common/common:cleanup_lib",
         "//source/common/common:enum_to_int",
@@ -402,6 +405,8 @@ envoy_cc_library(
         "//source/common/network:upstream_socket_options_filter_state_lib",
         "//source/common/orca:orca_load_metrics_lib",
         "//source/common/orca:orca_parser",
+        "//source/common/protobuf:utility_lib",
+        "//source/common/stream_info:stream_info_lib",
         "//source/common/stream_info:uint32_accessor_lib",
         "//source/common/upstream:load_balancer_context_base_lib",
         "//source/common/upstream:upstream_factory_context_lib",
