--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -44,6 +44,11 @@ bug_fixes:
     Fixed a bug where access log gets skipped for HTTP/3 requests when the stream is half closed. This behavior can be
     reverted by setting the runtime guard
     ``envoy.reloadable_features.quic_fix_defer_logging_miss_for_half_closed_stream`` to ``false``.
+- area: http
+  change: |
+    Fixed a bug where the premature resets of streams may result in the recursive draining and potential
+    stack overflow. Setting proper ``max_concurrent_streams`` value for HTTP/2 or HTTP/3 could eliminate
+    the risk of the stack overflow before this fix.
 
 removed_config_or_runtime:
 # *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
