--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -14,6 +14,13 @@ behavior_changes:
 - area: ext_proc
   change: |
     Reverted https://github.com/envoyproxy/envoy/pull/39740 to re-enable fail_open+FULL_DUPLEX_STREAMED configuraton combination.
+- area: http2
+  change: |
+    The default value for the :ref:`maximum number of concurrent streams in HTTP/2
+    <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_concurrent_streams>`
+    has been changed from 2147483647 to 1024. This change could be reverted temporarily by
+    setting the runtime guard ``envoy.reloadable_features.safe_http2_max_concurrent_streams``
+    to ``false``.
 
 minor_behavior_changes:
 # *Changes that may cause incompatibilities for some users, but should not for most*
