--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -33,7 +33,10 @@ minor_behavior_changes:
     ``envoy.reloadable_features.generic_proxy_codec_buffer_limit`` to ``false``.
 - area: http
   change: |
-    Adds accounting for decompressed HTTP header bytes sent and received. Existing stats only count wire-encoded header bytes. This can be accessed through the `%UPSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%`, `%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%`, `%UPSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%`, and the `%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%` access_log command operators.
+    Adds accounting for decompressed HTTP header bytes sent and received. Existing stats only count wire-encoded header bytes.
+    This can be accessed through the `%UPSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%`,
+    `%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%`, `%UPSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%`, and the
+    `%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%` access_log command operators.
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
