--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -18,8 +18,15 @@ behavior_changes:
   change: |
     The default value for the :ref:`maximum number of concurrent streams in HTTP/2
     <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.max_concurrent_streams>`
-    has been changed from 2147483647 to 1024. This change could be reverted temporarily by
-    setting the runtime guard ``envoy.reloadable_features.safe_http2_max_concurrent_streams``
+    has been changed from 2147483647 to 1024.
+    The default value for the :ref:`initial stream window size in HTTP/2
+    <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.initial_stream_window_size>`
+    has been changed from 256MiB to 1MiB.
+    The default value for the :ref:`initial connection window size in HTTP/2
+    <envoy_v3_api_field_config.core.v3.Http2ProtocolOptions.initial_connection_window_size>`
+    has been changed from 256MiB to 1MiB.
+    This change could be reverted temporarily by
+    setting the runtime guard ``envoy.reloadable_features.safe_http2_options``
     to ``false``.
 
 minor_behavior_changes:
