--- a/test/common/common/BUILD
+++ b/test/common/common/BUILD
@@ -306,12 +306,7 @@ envoy_cc_test(
     ],
 )
 
-envoy_cc_test(
-    name = "trie_lookup_table_test",
-    srcs = ["trie_lookup_table_test.cc"],
-    rbe_pool = "6gig",
-    deps = ["//source/common/common:trie_lookup_table_lib"],
-)
+## Removed: trie_lookup_table_test since regular Trie has been removed.
 
 envoy_cc_test(
     name = "radix_tree_test",
@@ -454,21 +449,7 @@ envoy_benchmark_test(
     benchmark_binary = "utility_speed_test",
 )
 
-envoy_cc_benchmark_binary(
-    name = "trie_lookup_table_speed_test",
-    srcs = ["trie_lookup_table_speed_test.cc"],
-    rbe_pool = "6gig",
-    deps = [
-        "//source/common/common:trie_lookup_table_lib",
-        "@com_github_google_benchmark//:benchmark",
-        "@com_google_absl//absl/strings",
-    ],
-)
-
-envoy_benchmark_test(
-    name = "trie_lookup_table_speed_test_benchmark_test",
-    benchmark_binary = "trie_lookup_table_speed_test",
-)
+## Removed: trie_lookup_table_speed_test and its benchmark harness.
 
 envoy_cc_benchmark_binary(
     name = "radix_tree_speed_test",
@@ -492,7 +473,6 @@ envoy_cc_benchmark_binary(
     rbe_pool = "6gig",
     deps = [
         "//source/common/common:radix_tree_lib",
-        "//source/common/common:trie_lookup_table_lib",
         "//source/common/http:headers_lib",
         "@com_github_google_benchmark//:benchmark",
         "@com_google_absl//absl/strings",
