--- a/source/extensions/extensions_metadata.yaml
+++ b/source/extensions/extensions_metadata.yaml
@@ -867,6 +867,11 @@ envoy.formatter.req_without_query:
   status: alpha
   type_urls:
   - envoy.extensions.formatter.req_without_query.v3.ReqWithoutQuery
+envoy.built_in_formatters.xfcc_value:
+  categories:
+  - envoy.built_in_formatters
+  security_posture: unknown
+  status: alpha
 envoy.geoip_providers.maxmind:
   categories:
   - envoy.geoip_providers
