--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -11,9 +11,6 @@ behavior_changes:
     <envoy_v3_api_field_extensions.request_id.uuid.v3.UuidRequestIdConfig.pack_trace_reason>` is set
     to ``true`` (it is ``true`` by default), then a request have been marked as traced may cannot be
     unmarked as traced after the tracing refresh.
-- area: ext_proc
-  change: |
-    Reverted https://github.com/envoyproxy/envoy/pull/39740 to re-enable fail_open+FULL_DUPLEX_STREAMED configuraton combination.
 - area: http2
   change: |
     The default value for the :ref:`maximum number of concurrent streams in HTTP/2
@@ -28,6 +25,9 @@ behavior_changes:
     This change could be reverted temporarily by
     setting the runtime guard ``envoy.reloadable_features.safe_http2_options``
     to ``false``.
+- area: ext_proc
+  change: |
+    Reverted https://github.com/envoyproxy/envoy/pull/39740 to re-enable fail_open+FULL_DUPLEX_STREAMED configuration combination.
 
 minor_behavior_changes:
 # *Changes that may cause incompatibilities for some users, but should not for most*
