composite: allow filters to be added on encode path
Removes assertion preventing matchers from inserting a filter on the response path.

It appears like this behavior used to cause a crash or be validated against, but it doesn't appear to still be the case.

This is very useful for end-users who would like to, for example, mutate the response body for a filter when a request header is specified and the content-type matches, which could be especially expensive if the executed filter is ext_proc.

Tested via integration tests (added in this commit).

Signed-off-by: Matt Leon <mattleon@google.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -246,6 +246,9 @@ new_features:
     extract trace information from W3C trace headers when B3 headers are not present (downstream),
     and inject both B3 and W3C trace headers for upstream requests to maximize compatibility.
     The default value ``USE_B3`` maintains backward compatibility with B3-only behavior.
+- area: composite
+  change: |
+    Allow composite filter to be configured to insert a filter into filter chain outside of the decode headers lifecycle phase.
 - area: rbac
   change: |
     Switch the IP matcher to use LC-Trie for performance improvements.
