--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -1,14 +1,17 @@
-date: August 19, 2025
+date: Pending
+
+behavior_changes:
+# *Changes that are expected to cause an incompatibility if applicable; deployment changes are likely required*
+
+minor_behavior_changes:
+# *Changes that may cause incompatibilities for some users, but should not for most*
 
 bug_fixes:
-- area: http
-  change: |
-    Fixed a bug where the premature resets of streams may result in the recursive draining and potential
-    stack overflow. Setting proper ``max_concurrent_streams`` value for HTTP/2 or HTTP/3 could eliminate
-    the risk of the stack overflow before this fix.
-- area: listeners
-  change: |
-    Fixed issue where :ref:`TLS inspector listener filter <config_listener_filters_tls_inspector>` timed out
-    when used with other listener filters. The bug was triggered when a previous listener filter processed more data
-    than the TLS inspector had requested, causing the TLS inspector to incorrectly calculate its buffer growth strategy.
-    The fix ensures that buffer growth is now based on actual bytes available rather than the previously requested amount.
+# *Changes expected to improve the state of the world and are unlikely to have negative effects*
+
+removed_config_or_runtime:
+# *Normally occurs at the end of the* :ref:`deprecation period <deprecated>`
+
+new_features:
+
+deprecated:
