--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -35,6 +35,16 @@ minor_behavior_changes:
   change: |
     turn off HTTP/3 happy eyeball in upstream via runtime guard ``envoy.reloadable_features.http3_happy_eyeballs``.
     It is found to favor TCP over QUIC when UDP does not work on v6 network but works on v4.
+- area: http
+  change: |
+    Adds accounting for decompressed HTTP header bytes sent and received. Existing stats only count wire-encoded header bytes.
+    This can be accessed through the ``%UPSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%``,
+    ``%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_RECEIVED%``, ``%UPSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%``, and the
+    ``%DOWNSTREAM_DECOMPRESSED_HEADER_BYTES_SENT%`` access_log command operators.
+- area: ext_proc
+  change: |
+    If failure_mode_allowed is true, save the grpc failure status code returned from the ext_proc server in the filter state. 
+    Previously all fail-open cases would return call_status Grpc::Status::Aborted. 
 
 bug_fixes:
 # *Changes expected to improve the state of the world and are unlikely to have negative effects*
