maxmind geoip provider: add gauge to track database creation timestamp
This change adds a gauge metric to track the build epoch of a Maxmind
database file, see https://maxmind.github.io/MaxMind-DB/#build_epoch.
This value is part of the MMDB file formats metadata field and according
to docs should always be present
https://maxmind.github.io/libmaxminddb.

The main usage of this metric would be to track the freshness of the
database files that the Envoy process has loaded into memory.

Signed-off-by: Alex Sundström <asundstrom@spotify.com>

--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -272,6 +272,11 @@ new_features:
 - area: http
   change: |
     Added ``upstream_rq_per_cx`` histogram to track requests per connection for monitoring connection reuse efficiency.
+- area: geoip
+  change: |
+    Added a new metric ``db_build_epoch`` to track the build timestamp of the Maxmind geolocation database files.
+    This can be used to monitor the freshness of the databases currently in use by the filter.
+    See https://maxmind.github.io/MaxMind-DB/#build_epoch for more details.
 
 
 deprecated:
