--- a/changelogs/current.yaml
+++ b/changelogs/current.yaml
@@ -186,6 +186,14 @@ new_features:
     (``GET``, ``HEAD``, ``DELETE``, ``TRACE``) are validated and will throw an error if combined with payloads.
     The implementation is optimized to process the payload once during configuration and reuse it for all health
     check requests. See :ref:`HttpHealthCheck <envoy_v3_api_msg_config.core.v3.HealthCheck.HttpHealthCheck>` for configuration details.
+- area: tcp_proxy
+  change: |
+    Added support for generating and propagating a request ID on synthesized upstream HTTP requests when tunneling requests.
+    It can be configured using :ref:`generate_request_id
+    <envoy_v3_api_field_extensions.filters.network.tcp_proxy.v3.TcpProxy.TunnelingConfig.generate_request_id>`
+    to enable generation and :ref:`request_id_extension
+    <envoy_v3_api_field_extensions.filters.network.tcp_proxy.v3.TcpProxy.TunnelingConfig.request_id_extension>`
+    to customize request ID behavior.
 - area: router_check_tool
   change: |
     Added support for testing routes with :ref:`dynamic metadata matchers <envoy_v3_api_field_config.route.v3.RouteMatch.dynamic_metadata>`
