mcp_proxy and mcp_handler mcp_to_grpc
Signed-off-by: 爵银 <jueyin.hsl@alibaba-inc.com>

# Conflicts:
#	envoy/http/BUILD

--- a/api/BUILD
+++ b/api/BUILD
@@ -205,6 +205,7 @@ proto_library(
         "//envoy/extensions/filters/http/kill_request/v3:pkg",
         "//envoy/extensions/filters/http/local_ratelimit/v3:pkg",
         "//envoy/extensions/filters/http/lua/v3:pkg",
+        "//envoy/extensions/filters/http/mcp_proxy/v3:pkg",
         "//envoy/extensions/filters/http/oauth2/v3:pkg",
         "//envoy/extensions/filters/http/on_demand/v3:pkg",
         "//envoy/extensions/filters/http/original_src/v3:pkg",
@@ -279,6 +280,7 @@ proto_library(
         "//envoy/extensions/http/header_validators/envoy_default/v3:pkg",
         "//envoy/extensions/http/injected_credentials/generic/v3:pkg",
         "//envoy/extensions/http/injected_credentials/oauth2/v3:pkg",
+        "//envoy/extensions/http/mcp_handler/mcp_to_grpc/v3:pkg",
         "//envoy/extensions/http/original_ip_detection/custom_header/v3:pkg",
         "//envoy/extensions/http/original_ip_detection/xff/v3:pkg",
         "//envoy/extensions/http/stateful_session/cookie/v3:pkg",
